OMAP: remoteproc: set dependency on CONFIG_CMA
Commit f1ae98da8525c6b8b1c301c3a2b0bd2b6515cca2
(ARM: dma-mapping: remove unconditional dependency on CMA)
removes the unconditional selection of CMA for ARM platforms,
however omap remoteproc needs it for its pool allocation,
so make it depend on its Kconfig.

Now CMA must be selected before OMAP_REMOTEPROC can be
made available.

Signed-off-by: Omar Ramirez Luna <omar.luna@linaro.org>

--- a/drivers/remoteproc/Kconfig
+++ b/drivers/remoteproc/Kconfig
@@ -11,6 +11,7 @@ config OMAP_REMOTEPROC
 	depends on EXPERIMENTAL
 	depends on ARCH_OMAP4
 	depends on OMAP_IOMMU
+	depends on CMA
 	select REMOTEPROC
 	select OMAP_MBOX_FWK
 	select RPMSG
