--- a/arch/arm/boot/dts/omap4-panda.dts
+++ b/arch/arm/boot/dts/omap4-panda.dts
@@ -65,7 +65,7 @@
 			"40122000.mcbsp Playback", "BT_VX_DL",
 			"BT_VX_UL", "40122000.mcbsp Capture",
 			"40124000.mcbsp Playback", "MM_EXT_DL",
-			"MM_EXT_UL", "40124000.mcbsp Capture",
+			"MM_EXT_UL", "40124000.mcbsp Capture";
 	};
 };
 
